# module-jni

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README  RELEASE-NOTES  make-inc  qore-jni-module.spec
design/: opcua-milo-1.1.4-upgrade.md
docs/: mainpage.dox.tmpl
examples/JakartaJms/: artemis-quickstart.qr  browse-queue.qr  message-selector.qr  receive-from-queue.qr  request-reply.qr  send-to-queue.qr  topic-subscriber.qr
maven/apache-poi/: pom.xml
maven/avro/: pom.xml
maven/camel/: pom.xml
maven/email/: pom.xml
maven/flyway/: pom.xml
maven/ical4j/: pom.xml
maven/jackcess/: pom.xml
maven/jasperreports/: pom.xml
maven/odfdom/: pom.xml
maven/opcua/: pom.xml
maven/tika/: pom.xml
maven/vcard/: pom.xml
qlib/AccessDataProvider/: AccessDataProvider.qm  AccessReadDataProvider.qc  AccessReadDataProviderFactory.qc  AccessTableReadDataProvider.qc
qlib/AvroDataProvider/: AvroDataProvider.qm  AvroReadDataProvider.qc  AvroReadDataProviderFactory.qc  AvroRecordDataType.qc  AvroWriteDataProvider.qc  AvroWriteDataProviderFactory.qc  AvroWriteOutputDataType.qc
qlib/BusyLightDataProvider/: BusyLightConnection.qc  BusyLightDataProvider.qc  BusyLightDataProvider.qm
qlib/CamelDataProvider/: CamelConnection.qc  CamelDataProvider.qc  CamelDataProvider.qm  CamelDataProviderFactory.qc  CamelMessageDataType.qc  CamelMessageResponseDataType.qc  CamelProducerDataProvider.qc  CamelRoutesDataProvider.qc
qlib/EmailDataProvider/: EmailDataProvider.qm  EmlReadDataProvider.qc  EmlReadDataProviderFactory.qc  EmlWriteDataProvider.qc  EmlWriteDataProviderFactory.qc  MboxReadDataProvider.qc  MboxReadDataProviderFactory.qc  MsgReadDataProvider.qc  MsgReadDataProviderFactory.qc
qlib/ExcelDataProvider/: ExcelDataProvider.qm  ExcelReadDataProvider.qc  ExcelReadDataProviderFactory.qc  ExcelWorksheetReadDataProvider.qc  ExcelWriteDataProvider.qc  ExcelWriteDataProviderFactory.qc
qlib/FlywayDataProvider/: FlywayCleanDataProvider.qc  FlywayConnection.qc  FlywayDataProvider.qc  FlywayDataProvider.qm  FlywayDataProviderFactory.qc  FlywayInfoDataProvider.qc  FlywayInfoRecordDataType.qc  FlywayMigrateDataProvider.qc  FlywayMigrateOutputDataType.qc  FlywayRepairDataProvider.qc  FlywayValidateDataProvider.qc
qlib/IcsDataProvider/: IcsDataProvider.qm  IcsReadDataProvider.qc  IcsReadDataProviderFactory.qc  IcsWriteDataProvider.qc  IcsWriteDataProviderFactory.qc
qlib/JakartaJmsDataProvider/: JakartaJmsDataProvider.qm  JmsBrowseRequestDataType.qc  JmsBrowserDataProvider.qc  JmsConnection.qc  JmsConnectionWrapper.qc  JmsDataProvider.qc  JmsDataProviderBase.qc  JmsDataProviderFactory.qc  JmsEventDataType.qc  JmsMessageDataType.qc  JmsMessageResponseType.qc  JmsPollingDataProvider.qc  JmsProducerDataProvider.qc  JmsSelectorBuilder.qc  JmsSessionPool.qc  JmsTypeMapper.qc
qlib/JasperReportsDataProvider/: JasperReportsDataProvider.qc  JasperReportsDataProvider.qm  JasperReportsDataProviderFactory.qc  JasperReportsOutputDataType.qc
qlib/JdbcDataProvider/: JdbcConnection.qc  JdbcDataProvider.qc  JdbcDataProvider.qm  JdbcDataProviderFactory.qc  JdbcExecDataProvider.qc  JdbcQueryDataProvider.qc  JdbcQueryRequestDataType.qc  JdbcQueryResponseDataType.qc  JdbcTablesDataProvider.qc
qlib/KafkaDataProvider/: KafkaConnection.qc  KafkaConnectionWrapper.qc  KafkaConsumerDataProvider.qc  KafkaDataProvider.qc  KafkaDataProvider.qm  KafkaDataProviderBase.qc  KafkaDataProviderFactory.qc  KafkaEventType.qc  KafkaMessageResponseType.qc  KafkaProducerDataProvider.qc
qlib/MqttDataProvider/: AbstractFunctionalMqttDataProvider.qc  AbstractMqttDataProvider.qc  MqttConnectedEventDataType.qc  MqttConnection.qc  MqttConnectionWrapper.qc  MqttDataProvider.qc  MqttDataProvider.qm  MqttDataProviderFactory.qc  MqttDevicesDataProvider.qc  MqttDisconnectedEventDataType.qc  MqttEventDataType.qc  MqttMessageDataType.qc
qlib/OdpDataProvider/: OdpDataProvider.qm  OdpReadDataProvider.qc  OdpReadDataProviderFactory.qc  OdpWriteDataProvider.qc  OdpWriteDataProviderFactory.qc
qlib/OdsDataProvider/: OdsDataProvider.qm  OdsReadDataProvider.qc  OdsReadDataProviderFactory.qc  OdsWorksheetReadDataProvider.qc  OdsWriteDataProvider.qc  OdsWriteDataProviderFactory.qc
qlib/OdtDataProvider/: OdtDataProvider.qm  OdtReadDataProvider.qc  OdtReadDataProviderFactory.qc  OdtWriteDataProvider.qc  OdtWriteDataProviderFactory.qc
qlib/OpcUaDataProvider/: AbstractFunctionalOpcUaDataProvider.qc  AbstractOpcUaDataProvider.qc  OpcUaBrowseResponseDataType.qc  OpcUaCallMethodResponseDataType.qc  OpcUaConnectedEventDataType.qc  OpcUaConnection.qc  OpcUaConnectionWrapper.qc  OpcUaDataChangeEventDataType.qc  OpcUaDataProvider.qc  OpcUaDataProvider.qm  OpcUaDataProviderFactory.qc  (+14 more)
src/: Dispatcher.cpp  Env.cpp  Env.h  Field.h  Functions.h  Globals.cpp  Globals.h  InvocationHandler.cpp  InvocationHandler.h  JavaToQore.cpp  JniQoreClass.cpp  JniQoreClass.h  Jvm.cpp  Jvm.h  Method.cpp  Method.h  QC_JavaArray.qpp  QC_QoreInvocationHandler.qpp  QoreJdbcConnection.cpp  QoreJdbcConnection.h  QoreJdbcDriver.cpp  QoreJdbcPreparedStatement.cpp  QoreJdbcPreparedStatement.h  QoreJdbcStatement.cpp  QoreJdbcStatement.h  QoreJniClassMap.cpp  QoreJniClassMap.h  QoreJniFunctionalInterface.h  QoreToJava.cpp  defs.cpp  defs.h  jni-module.cpp  jni-module.h  ql_jni.qpp
test/: AccessDataProvider.qtest  AvroDataProvider.qtest  BusyLightDataProvider.qtest  CamelDataProvider.qtest  EmailDataProvider.qtest  ExcelDataProvider.qtest  FlywayDataProvider.qtest  IcsDataProvider.qtest  JasperReportsDataProvider.qtest  JdbcDataProvider.qtest  KafkaDataProvider.qtest  KotlinQoreApiTest.kt  KotlinTestClass.kt  MqttDataProvider.qtest  OdpDataProvider.qtest  OdsDataProvider.qtest  OdtDataProvider.qtest  OpcUaDataProvider.qtest  PowerPointDataProvider.qtest  QoreDynamicTest19.java  QoreDynamicTest20.java  TikaDataProvider.qtest  VcfDataProvider.qtest  VisioDataProvider.qtest  WordDataProvider.qtest  foreign_thread_deref_crash.cpp  jdbc.qtest  jms.qtest  jni-callback.qtest  jni-compat.qtest  jni-concurrent-codegen.qtest  jni.qtest  kotlin.qtest  opcua-nodeset2-minimal.xml
(+146 files in other folders)
